<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="MotionFunctions" Id="{7dfb6efd-1034-45c3-ba43-5dc10decbfbc}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE MotionFunctions :
(
    /////////All the motion functions that you can tell the PLC to do/////////
    MoveAbsolute    := 0, //Move to a set position
    MoveRelative    := 1, //Move a set distance
    Jog             := 2, //Continous moving in the direction specified by bJogFwd or bJogBwd as long as one is high. Will stop if bExecute goes high. Generally not called by an external control system.
    MoveVelocity    := 3, //Continous moving at a set velocity once bExecute goes high
    MoveModulo      := 4, //Move for 360 deg rotation, see Beckhoff docs
    GearIn          := 5, //Gears in this axis to be the slave of the axis specified in masterAxis with the ratio specified in there
    GearOut         := 6, //Removes gearing set in the above command
    Home            := 10 //Run the homing routine for the axis
):=Jog; //Jog is the default behaviour of the axis.
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>