<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_AxisConfig" Id="{e00fe310-8ff8-452a-800a-823efa83b1a3}">
    <Declaration><![CDATA[TYPE ST_AxisConfig :
STRUCT

    ///////Axis Parameters//////
    fOverride           :   LREAL := 100;   //Controller override %, used a global scale for an axis in terms of velocity etc. Generally set to 100%.
    fVelocity           :   LREAL;          //Velocity must be specified, no default used
    fAcceleration       :   LREAL;          //Not all FBs use, need to change this, 0 is NC default
    fDeceleration       :   LREAL;
    fPosition           :   LREAL;          //The position to move to for an absolute move and the amount to move in a relative move
    fHomePosition       :   LREAL;          //The position that the axis should be set to once homing is completed
    nHomeSeq            :   UINT;           //Homing sequence to perform

    //Restore position of incremental axis after loss of power to the CPU, 0=don't restore, 1=restore but don't home
    eRestorePosition    :   RestorePosition;

END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>